--- a/K_league_info/app/src/main/res/values/strings.xml
+++ b/K_league_info/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">K_league</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Score</string>
+    <string name="title_dashboard">Team</string>
+    <string name="title_notifications">Community</string>
 </resources>
